--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "javascript-blank",
-    "slug": "javascript-blank",
+    "name": "Tailwind",
+    "slug": "Tailwind",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
